Завершение работы прописывания основных команд

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,7 @@ add_executable(pro_hash main.cpp
         client-avl-tree/ClientAvlTree.h
         helper/checkPassport.h
         helper/input.h
+        helper/checkNumber.h
+        helper/checkTariff.h
+        helper/isNumber.h
 )
